--- a/header.html
+++ b/header.html
@@ -1,3 +1,9 @@
-<link rel='stylesheet' href='/blog/markdown-css-themes/markdown9.css'/>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel='stylesheet' href='/blog/markdown-css-themes/markdown10.css'/>
+</head>
+
+<body>
 
 
