--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,8 @@
 <p><span>&nbsp;</span></p>
 <p><span>&nbsp;</span></p>
 <pre><code> Friendly Reminder:
-    if you think this is useful, you can buy me a bite or invite me a sleep together... :)
+    If you think this is useful, you can buy me a bite or invite me a sleep together... :)
+    Anything you need, please contact master#at#yong.org.
 </code></pre>
 
 </body>
