--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel='stylesheet' href='/blog/markdown-css-themes/markdown10.css'/>
+<link rel='stylesheet' href='/blog/mdxy.css'/>
 </head>
 
 <body>
