--- a/header.html
+++ b/header.html
@@ -1,9 +1,10 @@
+<html xmlns:wb="http://open.weibo.com/wb">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel='stylesheet' href='/blog/mdxy.css'/>
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
-
 
