--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@ if(/Firefox/.test(navigator.userAgent)){
     setTimeout(x,0)
 }else{
     x()}
-})()"><img height="18px" src="/blog/static/pic/logo_linkedin_trans_black_135x22_zh_CN.png" alt="推荐到豆瓣" /></a>
+})()"><img height="18px" src="/blog/static/pic/logo_linkedin_trans_black_135x22_zh_CN.png" alt="To Linkedin" /></a>
 </td>
 <td >
 <a href="javascript:void(function(){var d=document,e=encodeURIComponent,s1=window.getSelection,s2=d.getSelection,s3=d.selection,s=s1?s1():s2?s2():s3?s3.createRange().text:'',r='http://www.douban.com/recommend/?url='+e(d.location.href)+'&title='+e(d.title)+'&sel='+e(s)+'&v=1',w=450,h=330,x=function(){if(!window.open(r,'douban','toolbar=0,resizable=1,scrollbars=yes,status=1,width='+w+',height='+h+',left='+(screen.width-w)/2+',top='+(screen.height-h)/2))location.href=r+'&r=1'};if(/Firefox/.test(navigator.userAgent)){setTimeout(x,0)}else{x()}})()"><img height="20px" src="/blog/static/pic/fw2douban1.png" alt="推荐到豆瓣" /></a>
@@ -25,7 +25,7 @@ if(/Firefox/.test(navigator.userAgent)){
     setTimeout(x,0)
 }else{
     x()}
-})()"><img height="20px" src="/blog/static/pic/google_logo.png" alt="推荐到豆瓣" /></a>
+})()"><img height="20px" src="/blog/static/pic/google_logo.png" alt="To Google" /></a>
 </td>
 <td>
 <a href="javascript:
@@ -35,7 +35,7 @@ if(/Firefox/.test(navigator.userAgent)){
     setTimeout(x,0)
 }else{
     x()}
-})()"><img height="30px" src="/blog/static/pic/facebook_logo_small.png" alt="推荐到豆瓣" /></a>
+})()"><img height="30px" src="/blog/static/pic/facebook_logo_small.png" alt="To Facebook" /></a>
 </td>
 <td>
 <a href="javascript:
@@ -45,10 +45,10 @@ if(/Firefox/.test(navigator.userAgent)){
     setTimeout(x,0)
 }else{
     x()}
-})()"><img height="25px" src="/blog/static/pic/twitter_logo.png" alt="推荐到豆瓣" /></a>
+})()"><img height="25px" src="/blog/static/pic/twitter_logo.png" alt="To Twitter" /></a>
 </td>
 <td>
-<wb:share-button addition="simple" type="button" ralateUid="1650470733" default_text="给大家分享一篇文章 "></wb:share-button>
+<wb:share-button addition="simple" type="button" ralateUid="1650470733" default_text="给大家分享一个链接 "></wb:share-button>
 </td>
 </tr>
 </table>
